@@ -135,6 +135,7 @@ Not ideal indeed, but probably the best of what we can achieve.
 ** {doc-base-url}/Array/Wrap[.wrap]
 * {doc-base-url}/Enumerable[Enumerable]
 ** {doc-base-url}/Enumerable/IndexBy[#index_by]
+** {doc-base-url}/Enumerable/Many[#many?]
 ** {doc-base-url}/Enumerable/MapSend[#map_send]
 ** {doc-base-url}/Enumerable/MapTo[#map_to]
 * {doc-base-url}/Hash[Hash]
